# IMT542_FinalProject_Ao3MM

./: README.md  pyproject.toml
data/: all_candela_works.json  allcandelaworks.json  fanwork_links.txt  first10works.json  pagination_links.txt  test_candela_works.json  test_candela_works1.json  test_candela_works2.json
data/csv_files/: additional_tags_df_exploded.csv  categories_df_exploded.csv  character_df_exploded.csv  cleaned_candela_df.csv  fandom_df_exploded.csv  (+2 more)
documentation_assignments/: Ao3 Metadata F.A.I.R. Assessment Table.xlsx  Ao3MM Metadata Schema.md  Ao3MM Methodology and Access.md  Ao3MM Test Plan.md  F.A.I.R. Assessment Summary.txt  IMT 542 Final Presentation_Stelter.pptx  IMT 542 Information Story.pptx
notebooks/: Step1_get_pagination_links.ipynb  Step2_get_fanwork_links.ipynb  Step3_parse_html_docs.ipynb  data_cleaning.ipynb  fanwork_links3.txt  fanwork_links5.txt  fanwork_links6.txt  fanwork_links9.txt  visualizations.ipynb
src/: Step1_get_pagination_links.py  Step2_get_fanwork_links.py  Step3_parse_html_docs.py  Step4_merge_json_files.py
test_scripts/: step1_test_pagination.py  step2_test_fanwork_links.py  step3_test_parse_html.py  step4_test_merge_JSON.py
z. for_gitignore/: IMT 542_G8_Stelter.md  additional_tags_df_exploded.csv  character_df_exploded.csv  draft_ao3mm_candela.py  fandom_df_exploded.csv  fanwork_dict_forG8.json  function_def get fanwork html url.txt  not_function_driver webdriver Firefox.txt  relationships_df_exploded.csv  test_script_for_G8.py  test_script_for_G8_onefanwork.py  try_except_tests.py  warnings_df_exploded.csv
(+127 files in other folders)
