[tool.poetry]
name = "imt542-finalproject-stelter"
version = "0.1.0"
description = ""
authors = ["ekmys13 <ekmys@proton.me>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.14"
jupyterlab = "^4.5.7"
pandas = "^3.0.3"
matplotlib = "^3.10.9"
feedparser = "^6.0.12"
pandas-stubs = "~=3.0.3"
lxml = "==7.0.0a1"
ao3-api = "==2.3.1"
plotly = "^6.7.0"
python-retry = "^0.0.1"
selenium = "^4.44.0"
webdriver-manager = "^4.1.2"
dateparser = "^1.4.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
